--- a/Vision Transformers.ipynb
+++ b/Vision Transformers.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOMGNIn9wsWIArwSnCiUGFF",
+      "authorship_tag": "ABX9TyOT/sNwA9Bl7SOvGPhSyu0q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +13,9 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU",
+    "gpuClass": "standard"
   },
   "cells": [
     {
@@ -74,9 +76,9 @@
           "height": 74
         },
         "id": "EDsXN6WIp5Pm",
-        "outputId": "74d6f455-f9f4-421e-8207-5f7a1ff2454e"
+        "outputId": "cd2860f6-4195-4f06-ba15-00f35c9cbd76"
       },
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
@@ -86,9 +88,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-6f3403ca-68b1-4f43-b1ec-30bb076efaa4\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-0d649747-a1d3-4f80-9039-b4b23253493f\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-6f3403ca-68b1-4f43-b1ec-30bb076efaa4\">\n",
+              "     <output id=\"result-0d649747-a1d3-4f80-9039-b4b23253493f\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -293,24 +295,24 @@
     {
       "cell_type": "code",
       "source": [
-        "!kaggle datasets download -d tongpython/cat-and-dog"
+        "!kaggle datasets download -d shaunthesheep/microsoft-catsvsdogs-dataset"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "x4_l_pBnp3US",
-        "outputId": "efc3447e-44f0-4923-8f7b-8759f554a2e5"
+        "outputId": "2e4d6ad9-bcee-447e-c30d-e3bb0ccf5176"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Downloading cat-and-dog.zip to /content\n",
-            " 95% 208M/218M [00:00<00:00, 238MB/s]\n",
-            "100% 218M/218M [00:01<00:00, 220MB/s]\n"
+            "Downloading microsoft-catsvsdogs-dataset.zip to /content\n",
+            "100% 788M/788M [00:37<00:00, 20.5MB/s]\n",
+            "100% 788M/788M [00:37<00:00, 22.0MB/s]\n"
           ]
         }
       ]
@@ -318,7 +320,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!unzip /content/cat-and-dog.zip"
+        "!unzip /content/microsoft-catsvsdogs-dataset.zip"
       ],
       "metadata": {
         "id": "-G6KhmiiqI7c"
@@ -378,7 +380,7 @@
       "metadata": {
         "id": "CRAcfjThqs7I"
       },
-      "execution_count": 7,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -393,22 +395,19 @@
     {
       "cell_type": "code",
       "source": [
-        "img_shape = (300, 300)\n",
+        "img_shape = (128, 128)\n",
         "\n",
-        "train_dogs = Path(\"dogs\")\n",
-        "train_cats = Path(\"cats\")\n",
+        "dog_path = Path(\"/content/PetImages/Dog\")\n",
+        "cat_path = Path(\"/content/PetImages/Cat\")\n",
         "\n",
-        "test_dogs = Path(\"dogs\")\n",
-        "test_cats = Path(\"cats\")\n",
-        "\n",
-        "uniq_labels = [\"cats\", \"dogs\"]\n",
+        "uniq_labels = [\"cat\", \"dog\"]\n",
         "\n",
         "today = date.today()"
       ],
       "metadata": {
         "id": "kWbO42Scqdg-"
       },
-      "execution_count": 8,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -437,7 +436,7 @@
       "metadata": {
         "id": "ZEi7uvJGrwuF"
       },
-      "execution_count": 9,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -465,25 +464,27 @@
         "\n",
         "      fname = f\"{path}/{img}\"\n",
         "\n",
-        "      # Cleaning the Image\n",
-        "      img = clean_img(fname)\n",
-        "\n",
-        "      X.extend([img])\n",
-        "      y.extend([target])\n",
-        "\n",
+        "      try:\n",
+        "        # Cleaning the Image\n",
+        "        img = clean_img(fname)\n",
+        "        X.extend([img])\n",
+        "        y.extend([target])\n",
+        "      \n",
+        "      except Exception as e: print(f\"Excepttion: {e}\") \n",
         "\n",
         "  return X, y"
       ],
       "metadata": {
         "id": "8QBdKnh7rWpv"
       },
-      "execution_count": 10,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "X_train, y_train = extract_image(path, target)"
+        "X_dog, y_dog = extract_image(dog_path, \"dog\")\n",
+        "X_cat, y_cat = extract_image(cat_path, \"cat\")"
       ],
       "metadata": {
         "id": "Ay6dFNSPsC3j"
@@ -493,7 +494,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "source": [
+        "X = X_dog + X_cat\n",
+        "y = y_dog + y_cat"
+      ],
+      "metadata": {
+        "id": "so_xPWIRC8SH"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Splitting Data Into Train/Test"
+      ],
+      "metadata": {
+        "id": "MKheBbjXEpZ1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train, X_test, y_train, y_test = "
+      ],
+      "metadata": {
+        "id": "n_0VK0adEsl3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
       "metadata": {
         "id": "qtWEjUz5dyf2"
       },
