--- a/Vision Transformers.ipynb
+++ b/Vision Transformers.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOT/sNwA9Bl7SOvGPhSyu0q",
+      "authorship_tag": "ABX9TyN2dEjSFk6csWkhpODLnLX7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,12 +71,12 @@
         "! chmod 600 ~/.kaggle/kaggle.json"
       ],
       "metadata": {
+        "id": "EDsXN6WIp5Pm",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 74
         },
-        "id": "EDsXN6WIp5Pm",
-        "outputId": "cd2860f6-4195-4f06-ba15-00f35c9cbd76"
+        "outputId": "ba395338-e05e-4c12-d7d0-1bec64a77bd4"
       },
       "execution_count": 2,
       "outputs": [
@@ -88,9 +88,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-0d649747-a1d3-4f80-9039-b4b23253493f\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-33dd7929-2393-495a-a25c-7807af62a753\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-0d649747-a1d3-4f80-9039-b4b23253493f\">\n",
+              "     <output id=\"result-33dd7929-2393-495a-a25c-7807af62a753\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -302,7 +302,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x4_l_pBnp3US",
-        "outputId": "2e4d6ad9-bcee-447e-c30d-e3bb0ccf5176"
+        "outputId": "659bdb5b-b8c1-4139-860e-a8829c01175d"
       },
       "execution_count": 3,
       "outputs": [
@@ -311,8 +311,8 @@
           "name": "stdout",
           "text": [
             "Downloading microsoft-catsvsdogs-dataset.zip to /content\n",
-            "100% 788M/788M [00:37<00:00, 20.5MB/s]\n",
-            "100% 788M/788M [00:37<00:00, 22.0MB/s]\n"
+            "100% 786M/788M [00:35<00:00, 25.1MB/s]\n",
+            "100% 788M/788M [00:35<00:00, 23.4MB/s]\n"
           ]
         }
       ]
@@ -356,9 +356,9 @@
         "from tensorflow.keras.layers import Dense, Input, Flatten, Conv2D, MaxPool2D, GlobalAveragePooling1D, BatchNormalization, Embedding, Bidirectional, LSTM\n",
         "from tensorflow.keras.models import Model\n",
         "from tensorflow.keras.callbacks import ModelCheckpoint, EarlyStopping, ReduceLROnPlateau, TensorBoard\n",
-        "from tensorflow.keras.preprocessing.text import Tokenizer\n",
-        "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+        "\n",
         "# import keras_nlp\n",
+        "\n",
         "\n",
         "from sklearn.model_selection import train_test_split\n",
         "\n",
@@ -368,7 +368,7 @@
         "\n",
         "from PIL import Image\n",
         "\n",
-        "from transformers import AutoTokenizer, TFAutoModelForSequenceClassification\n",
+        "from transformers import ViTFeatureExtractor, TFViTForImageClassification\n",
         "\n",
         "import plotly.express as px\n",
         "from datetime import date\n",
@@ -380,7 +380,7 @@
       "metadata": {
         "id": "CRAcfjThqs7I"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -407,7 +407,7 @@
       "metadata": {
         "id": "kWbO42Scqdg-"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -436,7 +436,7 @@
       "metadata": {
         "id": "ZEi7uvJGrwuF"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -453,31 +453,36 @@
       "source": [
         "def extract_image(path, target):\n",
         "\n",
+        "  count = 0\n",
+        "\n",
         "  X = []\n",
         "  y = []\n",
         "\n",
         "  for img in os.listdir(path):\n",
         "\n",
-        "    _, tail = os.path.splitext(img)\n",
+        "    if count <=5000:\n",
         "\n",
-        "    if tail in [\".jpg\", \".jpeg\", \".png\"]:\n",
+        "      _, tail = os.path.splitext(img)\n",
         "\n",
-        "      fname = f\"{path}/{img}\"\n",
+        "      if tail in [\".jpg\", \".jpeg\", \".png\"]:\n",
         "\n",
-        "      try:\n",
-        "        # Cleaning the Image\n",
-        "        img = clean_img(fname)\n",
-        "        X.extend([img])\n",
-        "        y.extend([target])\n",
-        "      \n",
-        "      except Exception as e: print(f\"Excepttion: {e}\") \n",
+        "        fname = f\"{path}/{img}\"\n",
+        "\n",
+        "        try:\n",
+        "          # Cleaning the Image\n",
+        "          img = clean_img(fname)\n",
+        "          X.extend([img])\n",
+        "          y.extend([target])\n",
+        "          count += 1\n",
+        "        \n",
+        "        except Exception as e: print(f\"Excepttion: {e}\") \n",
         "\n",
         "  return X, y"
       ],
       "metadata": {
         "id": "8QBdKnh7rWpv"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -501,7 +506,7 @@
       "metadata": {
         "id": "so_xPWIRC8SH"
       },
-      "execution_count": 10,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -516,74 +521,206 @@
     {
       "cell_type": "code",
       "source": [
-        "X_train, X_test, y_train, y_test = "
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, shuffle=True, stratify=y)"
       ],
       "metadata": {
         "id": "n_0VK0adEsl3"
       },
-      "execution_count": null,
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Feature Extraction"
+      ],
+      "metadata": {
+        "id": "GA2zNWS3I53s"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "checkpoint = \"google/vit-base-patch16-224\""
+      ],
+      "metadata": {
+        "id": "GNs_0fHMJMZ5"
+      },
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
-      "metadata": {
-        "id": "qtWEjUz5dyf2"
-      },
-      "outputs": [],
       "source": [
-        "from transformers import ViTConfig, ViTModel\n",
-        "\n",
-        "# Initializing a ViT vit-base-patch16-224 style configuration\n",
-        "configuration = ViTConfig()\n",
-        "\n",
-        "# Initializing a model (with random weights) from the vit-base-patch16-224 style configuration\n",
-        "model = ViTModel(configuration)\n",
-        "\n",
-        "# Accessing the model configuration\n",
-        "configuration = model.config"
-      ]
+        "def feature_extraction(samples):\n",
+        "  \n",
+        "  feature_extractor = ViTFeatureExtractor.from_pretrained(checkpoint)\n",
+        "  \n",
+        "  return feature_extractor(samples, return_tensors=\"tf\")"
+      ],
+      "metadata": {
+        "id": "eeSwtZ5GI8F3"
+      },
+      "execution_count": 12,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "configuration"
+        "model = TFViTForImageClassification.from_pretrained(checkpoint)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "QyI6NgzepV6z",
-        "outputId": "22d746c6-5f3e-4f48-827b-345fe128f3c5"
+        "id": "WuGD2HmlJWCR",
+        "outputId": "7f620107-23c8-4629-d7ab-8449b520b6e7"
       },
-      "execution_count": 3,
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "All model checkpoint layers were used when initializing TFViTForImageClassification.\n",
+            "\n",
+            "All the layers of TFViTForImageClassification were initialized from the model checkpoint at google/vit-base-patch16-224.\n",
+            "If your task is similar to the task the model of the checkpoint was trained on, you can already use TFViTForImageClassification for predictions without further training.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.vit"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VoxrY_FJJX6m",
+        "outputId": "067b83b1-5383-4d8f-c656-0de0502c4803"
+      },
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "ViTConfig {\n",
-              "  \"attention_probs_dropout_prob\": 0.0,\n",
-              "  \"encoder_stride\": 16,\n",
-              "  \"hidden_act\": \"gelu\",\n",
-              "  \"hidden_dropout_prob\": 0.0,\n",
-              "  \"hidden_size\": 768,\n",
-              "  \"image_size\": 224,\n",
-              "  \"initializer_range\": 0.02,\n",
-              "  \"intermediate_size\": 3072,\n",
-              "  \"layer_norm_eps\": 1e-12,\n",
-              "  \"model_type\": \"vit\",\n",
-              "  \"num_attention_heads\": 12,\n",
-              "  \"num_channels\": 3,\n",
-              "  \"num_hidden_layers\": 12,\n",
-              "  \"patch_size\": 16,\n",
-              "  \"qkv_bias\": true,\n",
-              "  \"transformers_version\": \"4.24.0\"\n",
-              "}"
+              "<transformers.models.vit.modeling_tf_vit.TFViTMainLayer at 0x7f94205be810>"
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {
+        "id": "qtWEjUz5dyf2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "329f1dc2-6746-4664-fe85-766cf5b6258d"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "All model checkpoint layers were used when initializing TFViTForImageClassification.\n",
+            "\n",
+            "All the layers of TFViTForImageClassification were initialized from the model checkpoint at google/vit-base-patch16-224.\n",
+            "If your task is similar to the task the model of the checkpoint was trained on, you can already use TFViTForImageClassification for predictions without further training.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Egyptian cat\n"
+          ]
+        }
+      ],
+      "source": [
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "logits = model(**inputs).logits\n",
+        "\n",
+        "# model predicts one of the 1000 ImageNet classes\n",
+        "predicted_label = int(tf.math.argmax(logits, axis=-1))\n",
+        "print(model.config.id2label[predicted_label])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "inputs"
+      ],
+      "metadata": {
+        "id": "Cpov08-4pYGX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d70ea2e0-61b4-408b-e78b-a5d93a77bef4"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'pixel_values': <tf.Tensor: shape=(1, 3, 224, 224), dtype=float32, numpy=\n",
+              "array([[[[-0.53725487, -0.545098  , -0.5686274 , ..., -0.67058825,\n",
+              "          -0.6862745 , -0.69411767],\n",
+              "         [-0.5921568 , -0.5921568 , -0.59999996, ..., -0.6784314 ,\n",
+              "          -0.6862745 , -0.69411767],\n",
+              "         [-0.6784314 , -0.6627451 , -0.6392157 , ..., -0.7019608 ,\n",
+              "          -0.69411767, -0.69411767],\n",
+              "         ...,\n",
+              "         [-0.6313726 , -0.6392157 , -0.654902  , ..., -0.84313726,\n",
+              "          -0.7882353 , -0.7647059 ],\n",
+              "         [-0.64705884, -0.67058825, -0.7176471 , ..., -0.8509804 ,\n",
+              "          -0.81960785, -0.8039216 ],\n",
+              "         [-0.654902  , -0.69411767, -0.75686276, ..., -0.8509804 ,\n",
+              "          -0.8352941 , -0.827451  ]],\n",
+              "\n",
+              "        [[-0.13725483, -0.15294111, -0.18431365, ..., -0.51372546,\n",
+              "          -0.53725487, -0.545098  ],\n",
+              "         [-0.19999993, -0.19999993, -0.2156862 , ..., -0.5215686 ,\n",
+              "          -0.53725487, -0.545098  ],\n",
+              "         [-0.29411763, -0.27843136, -0.25490195, ..., -0.52941173,\n",
+              "          -0.53725487, -0.545098  ],\n",
+              "         ...,\n",
+              "         [-0.3333333 , -0.32549018, -0.31764704, ..., -0.51372546,\n",
+              "          -0.4980392 , -0.49019605],\n",
+              "         [-0.3490196 , -0.35686272, -0.38039213, ..., -0.5058823 ,\n",
+              "          -0.4980392 , -0.4980392 ],\n",
+              "         [-0.35686272, -0.38039213, -0.41960782, ..., -0.4980392 ,\n",
+              "          -0.4980392 , -0.4980392 ]],\n",
+              "\n",
+              "        [[ 0.4039216 ,  0.3803922 ,  0.34901965, ..., -0.14509797,\n",
+              "          -0.14509797, -0.14509797],\n",
+              "         [ 0.3411765 ,  0.33333337,  0.3176471 , ..., -0.14509797,\n",
+              "          -0.14509797, -0.14509797],\n",
+              "         [ 0.24705887,  0.254902  ,  0.27843142, ..., -0.15294111,\n",
+              "          -0.14509797, -0.14509797],\n",
+              "         ...,\n",
+              "         [ 0.30980396,  0.30980396,  0.3176471 , ...,  0.0196079 ,\n",
+              "           0.05882359,  0.082353  ],\n",
+              "         [ 0.2941177 ,  0.27843142,  0.254902  , ...,  0.02745104,\n",
+              "           0.05098045,  0.06666672],\n",
+              "         [ 0.28627455,  0.254902  ,  0.21568632, ...,  0.02745104,\n",
+              "           0.05098045,  0.05882359]]]], dtype=float32)>}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
         }
       ]
     },
@@ -591,7 +728,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Cpov08-4pYGX"
+        "id": "Q5sKcFvBIuwU"
       },
       "execution_count": null,
       "outputs": []
