--- a/Vision Transformers.ipynb
+++ b/Vision Transformers.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN2dEjSFk6csWkhpODLnLX7",
+      "authorship_tag": "ABX9TyMQBf1JtY1p0AAdLjjXwLlu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -380,7 +380,7 @@
       "metadata": {
         "id": "CRAcfjThqs7I"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -395,7 +395,7 @@
     {
       "cell_type": "code",
       "source": [
-        "img_shape = (128, 128)\n",
+        "img_shape = (224, 224)\n",
         "\n",
         "dog_path = Path(\"/content/PetImages/Dog\")\n",
         "cat_path = Path(\"/content/PetImages/Cat\")\n",
@@ -407,7 +407,7 @@
       "metadata": {
         "id": "kWbO42Scqdg-"
       },
-      "execution_count": 3,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -436,7 +436,7 @@
       "metadata": {
         "id": "ZEi7uvJGrwuF"
       },
-      "execution_count": 4,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -460,7 +460,7 @@
         "\n",
         "  for img in os.listdir(path):\n",
         "\n",
-        "    if count <=5000:\n",
+        "    if count <=500:\n",
         "\n",
         "      _, tail = os.path.splitext(img)\n",
         "\n",
@@ -482,20 +482,35 @@
       "metadata": {
         "id": "8QBdKnh7rWpv"
       },
-      "execution_count": 5,
+      "execution_count": 20,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "X_dog, y_dog = extract_image(dog_path, \"dog\")\n",
-        "X_cat, y_cat = extract_image(cat_path, \"cat\")"
+        "X_dog, y_dog = extract_image(dog_path, 0)\n",
+        "X_cat, y_cat = extract_image(cat_path, 1)"
       ],
       "metadata": {
-        "id": "Ay6dFNSPsC3j"
+        "id": "Ay6dFNSPsC3j",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d13d4573-85b4-42b6-b1c2-df17e5754b4b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Excepttion: OpenCV(4.6.0) /io/opencv/modules/imgproc/src/resize.cpp:4052: error: (-215:Assertion failed) !ssize.empty() in function 'resize'\n",
+            "\n",
+            "Excepttion: OpenCV(4.6.0) /io/opencv/modules/imgproc/src/resize.cpp:4052: error: (-215:Assertion failed) !ssize.empty() in function 'resize'\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -506,7 +521,7 @@
       "metadata": {
         "id": "so_xPWIRC8SH"
       },
-      "execution_count": 7,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -526,7 +541,19 @@
       "metadata": {
         "id": "n_0VK0adEsl3"
       },
-      "execution_count": 8,
+      "execution_count": 53,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_train = np.array(y_train)\n",
+        "y_test = np.array(y_test)"
+      ],
+      "metadata": {
+        "id": "ct7-dL8zNlj3"
+      },
+      "execution_count": 84,
       "outputs": []
     },
     {
@@ -546,7 +573,7 @@
       "metadata": {
         "id": "GNs_0fHMJMZ5"
       },
-      "execution_count": 13,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -555,28 +582,94 @@
         "def feature_extraction(samples):\n",
         "  \n",
         "  feature_extractor = ViTFeatureExtractor.from_pretrained(checkpoint)\n",
-        "  \n",
-        "  return feature_extractor(samples, return_tensors=\"tf\")"
+        "\n",
+        "  return feature_extractor(samples, return_tensors=\"np\")[\"pixel_values\"]"
       ],
       "metadata": {
         "id": "eeSwtZ5GI8F3"
       },
-      "execution_count": 12,
+      "execution_count": 56,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "model = TFViTForImageClassification.from_pretrained(checkpoint)"
+        "X_train = feature_extraction(X_train)\n",
+        "X_test = feature_extraction(X_test)"
+      ],
+      "metadata": {
+        "id": "rv2-6S8BK6QG"
+      },
+      "execution_count": 57,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Building the model"
+      ],
+      "metadata": {
+        "id": "BK6aRiBBORn4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def build_model(targets, checkpoint, input_shape):\n",
+        "\n",
+        "  base_model = TFViTForImageClassification.from_pretrained(checkpoint)\n",
+        "\n",
+        "  pixel_values = Input(shape=input_shape, name=\"pixel_values\")\n",
+        "\n",
+        "  x = base_model.vit(pixel_values=pixel_values)[0]\n",
+        "\n",
+        "  x = Flatten()(x)\n",
+        "\n",
+        "  units = len(np.unique(targets))\n",
+        "\n",
+        "  if units > 2:\n",
+        "      activation = \"softmax\"\n",
+        "      loss = \"sparse_categorical_crossentropy\"\n",
+        "  else:\n",
+        "      activation = \"sigmoid\"\n",
+        "      loss = \"binary_crossentropy\"\n",
+        "      units = units - 1\n",
+        "\n",
+        "  outputs = Dense(units, activation = activation, name = \"outputs\")(x)\n",
+        "\n",
+        "  model = Model(inputs=pixel_values, outputs=outputs)\n",
+        "\n",
+        "  optimizer =  tf.keras.optimizers.Adam()\n",
+        "\n",
+        "  model.compile(optimizer=optimizer, loss=loss, metrics=[\"accuracy\"])\n",
+        "\n",
+        "  # Model Architecture Export\n",
+        "  tf.keras.utils.plot_model(model, to_file='model.png', show_shapes=True, \n",
+        "                          show_dtype=True, show_layer_names=True, rankdir='TB',\n",
+        "                          expand_nested=True, dpi=300, layer_range=None, \n",
+        "                          show_layer_activations=True)\n",
+        "\n",
+        "  return model"
+      ],
+      "metadata": {
+        "id": "Zho8jqqLOTm4"
+      },
+      "execution_count": 85,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = build_model(y_train, checkpoint, X_train[0].shape)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "WuGD2HmlJWCR",
-        "outputId": "7f620107-23c8-4629-d7ab-8449b520b6e7"
+        "id": "x_lxR7h1QY6O",
+        "outputId": "4b8a5610-bc44-43e8-f3d2-9eaddff31cea"
       },
-      "execution_count": 14,
+      "execution_count": 86,
       "outputs": [
         {
           "output_type": "stream",
@@ -593,134 +686,28 @@
     {
       "cell_type": "code",
       "source": [
-        "model.vit"
+        "model.fit(X_train, y_train, validation_data = (X_test, y_test), epochs = 3, batch_size = 32)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "VoxrY_FJJX6m",
-        "outputId": "067b83b1-5383-4d8f-c656-0de0502c4803"
+        "id": "XD9CNNR7MDvE",
+        "outputId": "cc04c33b-8134-4deb-b569-1896a77dbbae"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<transformers.models.vit.modeling_tf_vit.TFViTMainLayer at 0x7f94205be810>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 19
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 9,
-      "metadata": {
-        "id": "qtWEjUz5dyf2",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "329f1dc2-6746-4664-fe85-766cf5b6258d"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "All model checkpoint layers were used when initializing TFViTForImageClassification.\n",
-            "\n",
-            "All the layers of TFViTForImageClassification were initialized from the model checkpoint at google/vit-base-patch16-224.\n",
-            "If your task is similar to the task the model of the checkpoint was trained on, you can already use TFViTForImageClassification for predictions without further training.\n"
-          ]
-        },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Egyptian cat\n"
+            "Epoch 1/3\n",
+            "26/26 [==============================] - 54s 1s/step - loss: 2.8819 - accuracy: 0.5094 - val_loss: 1.5733 - val_accuracy: 0.4975\n",
+            "Epoch 2/3\n",
+            "26/26 [==============================] - 34s 1s/step - loss: 1.0032 - accuracy: 0.4994 - val_loss: 1.7889 - val_accuracy: 0.4975\n",
+            "Epoch 3/3\n",
+            " 8/26 [========>.....................] - ETA: 22s - loss: 1.5527 - accuracy: 0.4414"
           ]
-        }
-      ],
-      "source": [
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "logits = model(**inputs).logits\n",
-        "\n",
-        "# model predicts one of the 1000 ImageNet classes\n",
-        "predicted_label = int(tf.math.argmax(logits, axis=-1))\n",
-        "print(model.config.id2label[predicted_label])"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "inputs"
-      ],
-      "metadata": {
-        "id": "Cpov08-4pYGX",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "d70ea2e0-61b4-408b-e78b-a5d93a77bef4"
-      },
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{'pixel_values': <tf.Tensor: shape=(1, 3, 224, 224), dtype=float32, numpy=\n",
-              "array([[[[-0.53725487, -0.545098  , -0.5686274 , ..., -0.67058825,\n",
-              "          -0.6862745 , -0.69411767],\n",
-              "         [-0.5921568 , -0.5921568 , -0.59999996, ..., -0.6784314 ,\n",
-              "          -0.6862745 , -0.69411767],\n",
-              "         [-0.6784314 , -0.6627451 , -0.6392157 , ..., -0.7019608 ,\n",
-              "          -0.69411767, -0.69411767],\n",
-              "         ...,\n",
-              "         [-0.6313726 , -0.6392157 , -0.654902  , ..., -0.84313726,\n",
-              "          -0.7882353 , -0.7647059 ],\n",
-              "         [-0.64705884, -0.67058825, -0.7176471 , ..., -0.8509804 ,\n",
-              "          -0.81960785, -0.8039216 ],\n",
-              "         [-0.654902  , -0.69411767, -0.75686276, ..., -0.8509804 ,\n",
-              "          -0.8352941 , -0.827451  ]],\n",
-              "\n",
-              "        [[-0.13725483, -0.15294111, -0.18431365, ..., -0.51372546,\n",
-              "          -0.53725487, -0.545098  ],\n",
-              "         [-0.19999993, -0.19999993, -0.2156862 , ..., -0.5215686 ,\n",
-              "          -0.53725487, -0.545098  ],\n",
-              "         [-0.29411763, -0.27843136, -0.25490195, ..., -0.52941173,\n",
-              "          -0.53725487, -0.545098  ],\n",
-              "         ...,\n",
-              "         [-0.3333333 , -0.32549018, -0.31764704, ..., -0.51372546,\n",
-              "          -0.4980392 , -0.49019605],\n",
-              "         [-0.3490196 , -0.35686272, -0.38039213, ..., -0.5058823 ,\n",
-              "          -0.4980392 , -0.4980392 ],\n",
-              "         [-0.35686272, -0.38039213, -0.41960782, ..., -0.4980392 ,\n",
-              "          -0.4980392 , -0.4980392 ]],\n",
-              "\n",
-              "        [[ 0.4039216 ,  0.3803922 ,  0.34901965, ..., -0.14509797,\n",
-              "          -0.14509797, -0.14509797],\n",
-              "         [ 0.3411765 ,  0.33333337,  0.3176471 , ..., -0.14509797,\n",
-              "          -0.14509797, -0.14509797],\n",
-              "         [ 0.24705887,  0.254902  ,  0.27843142, ..., -0.15294111,\n",
-              "          -0.14509797, -0.14509797],\n",
-              "         ...,\n",
-              "         [ 0.30980396,  0.30980396,  0.3176471 , ...,  0.0196079 ,\n",
-              "           0.05882359,  0.082353  ],\n",
-              "         [ 0.2941177 ,  0.27843142,  0.254902  , ...,  0.02745104,\n",
-              "           0.05098045,  0.06666672],\n",
-              "         [ 0.28627455,  0.254902  ,  0.21568632, ...,  0.02745104,\n",
-              "           0.05098045,  0.05882359]]]], dtype=float32)>}"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 10
         }
       ]
     },
@@ -728,7 +715,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Q5sKcFvBIuwU"
+        "id": "b20gxG22V3pY"
       },
       "execution_count": null,
       "outputs": []
