--- a/Vision Transformers.ipynb
+++ b/Vision Transformers.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQBf1JtY1p0AAdLjjXwLlu",
+      "authorship_tag": "ABX9TyOIa/bqUvY7z3FC8Xdl4UFz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -686,14 +686,14 @@
     {
       "cell_type": "code",
       "source": [
-        "model.fit(X_train, y_train, validation_data = (X_test, y_test), epochs = 3, batch_size = 32)"
+        "model.fit(X_train, y_train, validation_data = (X_test, y_test), epochs = 30, batch_size = 32)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "XD9CNNR7MDvE",
-        "outputId": "cc04c33b-8134-4deb-b569-1896a77dbbae"
+        "outputId": "0ac3567e-a178-4aa8-df55-a244213686c0"
       },
       "execution_count": null,
       "outputs": [
@@ -701,12 +701,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch 1/3\n",
-            "26/26 [==============================] - 54s 1s/step - loss: 2.8819 - accuracy: 0.5094 - val_loss: 1.5733 - val_accuracy: 0.4975\n",
-            "Epoch 2/3\n",
-            "26/26 [==============================] - 34s 1s/step - loss: 1.0032 - accuracy: 0.4994 - val_loss: 1.7889 - val_accuracy: 0.4975\n",
-            "Epoch 3/3\n",
-            " 8/26 [========>.....................] - ETA: 22s - loss: 1.5527 - accuracy: 0.4414"
+            "Epoch 1/30\n",
+            "26/26 [==============================] - ETA: 0s - loss: 0.7178 - accuracy: 0.5655"
           ]
         }
       ]
